<resources>
    <string name="app_name" translatable="false">Netflix</string>
    <string name="menu_filmes">Filmes</string>
    <string name="menu_series">Series</string>
    <string name="menu_minhalista">Minha Lista</string>
    <string name="categoria1">Desenho Animado</string>
    <string name="categoria2">Animais Falantes</string>
    <string name="categoria3">Emocionante</string>
    <string name="botaoAssistir">Assistir</string>
    <string name="botaoLista">MINHA LISTA</string>
    <string name="botaoInfo">DETALHES</string>
    <string name="lancamento">Lançamentos</string>
</resources>