<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/logoNetflix"
        android:layout_width="43dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@+id/guideLineHorizontal2"
        app:layout_constraintEnd_toStartOf="@+id/filmes"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideLineHorizontal1"
        app:srcCompat="@drawable/netflixlogo" />

    <TextView
        android:id="@+id/filmes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_filmes"
        android:textColor="@color/menu_navegacao"
        app:layout_constraintBottom_toBottomOf="@+id/logoNetflix"
        app:layout_constraintEnd_toStartOf="@+id/series"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/logoNetflix"
        app:layout_constraintTop_toTopOf="@+id/logoNetflix" />

    <TextView
        android:id="@+id/series"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_series"
        android:textColor="@color/menu_navegacao"
        app:layout_constraintBottom_toBottomOf="@+id/filmes"
        app:layout_constraintEnd_toStartOf="@+id/minhalista"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/filmes"
        app:layout_constraintTop_toTopOf="@+id/filmes" />

    <TextView
        android:id="@+id/minhalista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_minhalista"
        android:textColor="@color/menu_navegacao"
        app:layout_constraintBottom_toBottomOf="@+id/series"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/series"
        app:layout_constraintTop_toTopOf="@+id/series" />

    <ImageView
        android:id="@+id/logofilme"
        android:layout_width="220dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toTopOf="@+id/guideLineHorizontal3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideLineHorizontal2"
        app:srcCompat="@drawable/roboselvagemlogo" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineHorizontal1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineHorizontal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineHorizontal3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30028328" />

    <TextView
        android:id="@+id/categoria1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/categoria1"
        android:textColor="@color/menu_navegacao"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/categoria2"
        app:layout_constraintEnd_toStartOf="@+id/categoria2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/categoria2" />

    <TextView
        android:id="@+id/categoria2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/categoria3"
        android:textColor="@color/menu_navegacao"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/categoria3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/categoria1"
        app:layout_constraintTop_toTopOf="@+id/guideLineHorizontal3" />

    <TextView
        android:id="@+id/categoria3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="@string/categoria2"
        android:textColor="@color/menu_navegacao"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/categoria2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/categoria2"
        app:layout_constraintTop_toTopOf="@+id/categoria2" />

</androidx.constraintlayout.widget.ConstraintLayout>